[gd_scene load_steps=2 format=3 uid="uid://v7unggthm5ap"]

[ext_resource type="Script" path="res://Scripts/pausemenu.gd" id="1_chewe"]

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_chewe")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0, 0, 0, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -124.0
offset_top = -173.5
offset_right = 124.0
offset_bottom = 173.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 50

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Paused!"
horizontal_alignment = 1

[node name="Resume" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Resume"

[node name="Restart" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Restart"

[node name="Menu" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Menu"

[node name="Quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Quit"

[connection signal="button_up" from="VBoxContainer/Resume" to="." method="_on_resume_button_up"]
[connection signal="button_up" from="VBoxContainer/Restart" to="." method="_on_restart_button_up"]
[connection signal="button_up" from="VBoxContainer/Menu" to="." method="_on_menu_button_up"]
[connection signal="button_up" from="VBoxContainer/Quit" to="." method="_on_quit_button_up"]
